--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "primereact": "^10.5.3",
     "react": "^18.2.0",
     "react-code-input": "^3.10.1",
