--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "nodemailer": "^6.9.13",
     "primereact": "^10.5.3",
     "react": "^18.2.0",
     "react-code-input": "^3.10.1",
@@ -24,6 +25,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "vercel": "^33.6.1"
