--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.1.1",
+    "@mui/x-date-pickers": "^7.1.1",
+    "@mui/x-date-pickers-pro": "^7.1.1",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
-    "primereact": "^10.5.3",
+    "primereact": "^10.6.2",
     "react": "^18.2.0",
     "react-code-input": "^3.10.1",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.4",
     "styled-components": "^6.1.8",
     "vercel": "^33.6.1"
   },
