--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,10 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
-    "nodemon": "^3.1.0"
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.0",
+    "otp-generator": "^4.0.1",
+    "validator": "^13.11.0"
   },
   "name": "ats",
   "version": "1.0.0",
