--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,16 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2",
+    "mongodb": "^5.9.1",
+    "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
